<resources>
    <string name="app_name">作业提交</string>
    <string name="saying">书山寻宝；学海泛舟。</string>
    <string name="username_input">学号</string>
    <string name="password_input">密码</string>
    <string name="login">登录</string>
    <string name="input_password">1234567890.A B C D E F G H I J K L M N O P Q R S T U V W X Y Z a b c d e f g h i j k l m n o p q r s t u v w x y z</string>
    <string name="title_activity_main">Main</string>
    <string name="determine">确定</string>
    <string name="cancel">取消</string>
    <string name="home">首页</string>
    <string name="my">我的</string>
    <string name="find">发现</string>
    <string name="setting">设置</string>
    <string name="feedback">反馈</string>
    <string name="Night_mode">夜间模式</string>
    <string name="Cancellation">注销</string>
    <string name="work">作业情况</string>
    <string name="about">关于我们</string>
    <string name="people">人员名单</string>
    <string name="Beautify">美化:</string>
    <string name="program">程序:</string>
    <string name="Plan">策划:</string>
    <string name="test">测试:</string>
    <string name="data_base">数据库:</string>
    <string name="Send">发送</string>
    <string name="people_name">背书包的小屁孩儿</string>
    <string name="Opinion">有什么好的意见和建议请反馈给制作人员，我们会尽快的解决您提出的问题，感谢您宝贵的意见和建议！</string>
</resources>
