<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="com.example.baby.graduationdesignone.MainActivity">

    <FrameLayout
        android:id="@+id/fl_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>

    <RadioGroup
        android:id="@+id/rbtn_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efefef"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtn_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/color_bg_selector"
            android:button="@null"
            android:drawableBottom="@drawable/home_selector"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@drawable/textcolor"/>

        <RadioButton
            android:id="@+id/rbtn_find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/color_bg_selector"
            android:button="@null"
            android:drawableBottom="@drawable/find_selector"
            android:gravity="center"
            android:text="@string/find"
            android:textColor="@drawable/textcolor"/>

        <RadioButton
            android:id="@+id/rbtn_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/color_bg_selector"
            android:button="@null"
            android:drawableBottom="@drawable/my_selector"
            android:gravity="center"
            android:text="@string/my"
            android:textColor="@drawable/textcolor"/>
    </RadioGroup>
</LinearLayout>
